5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4131/executions/1637_2443.log
== TEST (2019-04-10 11:01:47) 
-- CODE:
from math import *
r= float(input("raio:"))
x= float(input("altura:"))
opcao= int(input("numero:"))
esfera= 4*(pi*(r**3))
calota= (pi*(x**2)*(3r-x))/3
comb= esfera-calota
ar=calota
if(opcao==2):
	print(round(comb,4))
else(opcao==1):
	print(round(ar,4))
-- ERROR:
File "XXXX", line 6
    calota= (pi*(x**2)*(3r-x))/3
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 11:04:45) 
-- CODE:

r= float(input("raio:"))
x= float(input("altura:"))
opcao= int(input("numero:"))
from math import *
esfera= 4*(pi*(r**3))
calota= (pi*(x**2)*(3r-x))/3
comb= esfera-calota
ar=calota
if(opcao==2):
	print(round(comb,4))
else(opcao==1):
	print(round(ar,4))
-- ERROR:
File "XXXX", line 7
    calota= (pi*(x**2)*(3r-x))/3
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 11:13:27) 
-- CODE:
r= float(input("raio:"))
x= float(input("altura:"))
opcao= int(input("numero:"))
from math import *
esfera= 4*( pi*(r**3))
calota= (pi *(x**2)*(3r-x))/3
comb= esfera-calota
ar=calota
if(opcao==2):
	print(round(comb,4))
else(opcao==1):
	print(round(ar,4))
-- ERROR:
File "XXXX", line 6
    calota= (pi *(x**2)*(3r-x))/3
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 11:14:02) 
-- CODE:
r= float(input("raio:"))
x= float(input("altura:"))
opcao= (input("numero:")
from math import *
esfera= 4*( pi*(r**3))
calota= (pi *(x**2)*(3r-x))/3
comb= esfera-calota
ar=calota
if(opcao==2):
	print(round(comb,4))
else(opcao==1):
	print(round(ar,4))
-- ERROR:
File "XXXX", line 4
    from math import *
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 11:14:33) 
-- CODE:
from math import *
r= float(input("raio:"))
x= float(input("altura:"))
opcao= (input("numero:")

esfera= 4*( pi*(r**3))
calota= (pi *(x**2)*(3r-x))/3
comb= esfera-calota
ar=calota
if(opcao==2):
	print(round(comb,4))
else(opcao==1):
	print(round(ar,4))
-- ERROR:
File "XXXX", line 6
    esfera= 4*( pi*(r**3))
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 11:17:19) 
-- CODE:
from math import *
r= float(input("raio:"))
x= float(input("altura:"))
opcao= (input("numero:")
esfera== 4*( pi*(r**3))
calota== (pi *(x**2)*(3r-x))/3
comb= esfera-calota
ar=calota
if(opcao==2):
	print(round(comb,4))
else(opcao==1):
	print(round(ar,4))
-- ERROR:
File "XXXX", line 5
    esfera== 4*( pi*(r**3))
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 11:18:11) 
-- CODE:
from math import *
r= float(input("raio:"))
x= float(input("altura:"))
opcao= (input("numero:")
esfera= (4*( pi*(r**3)))/3
calota= (pi *(x**2)*(3r-x))/3
comb= esfera-calota
ar=calota
if(opcao==2):
	print(round(comb,4))
else(opcao==1):
	print(round(ar,4))
-- ERROR:
File "XXXX", line 5
    esfera= (4*( pi*(r**3)))/3
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 11:21:35) 
-- CODE:
from math import *
r= float(input("raio:"))
x= float(input("altura:"))
opcao= (input("numero:")
esfera= (4*( pi*(r**3)))/3
calota= (pi *(x**2)*(3r-x))/3
comb= esfera-calota
ar=calota
if(opcao==2):
	print(round(comb,4))
else:
	print(round(ar,4))
-- ERROR:
File "XXXX", line 5
    esfera= (4*( pi*(r**3)))/3
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 11:21:43) 
-- CODE:
from math import *
r= float(input("raio:"))
x= float(input("altura:"))
opcao= (input("numero:")
esfera= (4*( pi*(r**3)))/3
calota= (pi *(x**2)*(3r-x))/3
comb= esfera-calota
ar=calota
if(opcao==2):
	print(round(comb,4))
else:
	print(round(ar,4))
-- ERROR:
File "XXXX", line 5
    esfera= (4*( pi*(r**3)))/3
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:26:17) 
-- CODE:
from math import *
r= float(input("raio:"))
x= float(input("altura:"))
opcao= (input("numero:")
esfera= (4*( pi*(r**3)))/3
calota= (pi *(x**2)*(3r-x))/3
comb= esfera-calota
ar=calota
if(opcao==2):
	print(round(comb,4))
else(opcao==1):
	print(round(ar,4))
-- ERROR:
File "XXXX", line 5
    esfera= (4*( pi*(r**3)))/3
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:26:33) 
-- CODE:
from math import *
r= float(input("raio:"))
x= float(input("altura:"))
opcao= input("numero:")
esfera= (4*( pi*(r**3)))/3
calota= (pi *(x**2)*(3r-x))/3
comb= esfera-calota
ar=calota
if(opcao==2):
	print(round(comb,4))
else(opcao==1):
	print(round(ar,4))
-- ERROR:
File "XXXX", line 6
    calota= (pi *(x**2)*(3r-x))/3
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:26:53) 
-- CODE:
from math import *
r= float(input("raio:"))
x= float(input("altura:"))
opcao= input("numero:")
esfera= (4*( pi*(r**3)))/3
calota= (pi *(x**2)*(3r-x))/3
comb= esfera-calota
ar=calota
if(opcao=2):
	print(round(comb,4))
else(opcao=1):
	print(round(ar,4))
-- ERROR:
File "XXXX", line 6
    calota= (pi *(x**2)*(3r-x))/3
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:27:23) 
-- CODE:
from math import *
r= float(input("raio:"))
x= float(input("altura:"))
opcao= input("numero:")
esfera= (4*( pi*(r**3)))/3
calota= (pi *(x**2)*(3r-x))/3
comb= esfera-calota
ar=calota
if(opcao=2):
	print(round(comb,4))
else:
	print(round(ar,4))
-- ERROR:
File "XXXX", line 6
    calota= (pi *(x**2)*(3r-x))/3
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:33:06) 
-- CODE:
from math import *
r= float(input("raio:"))
x= float(input("altura:"))
opcao= int(input("numero 1 ou 2:")
esfera= (4*( pi*(r**3)))/3
calota= (pi *(x**2)*(3r-x))/3
comb= esfera-calota
ar=calota
if(opcao=2):
	print(round(comb,4))
else:
	print(round(ar,4))
-- ERROR:
File "XXXX", line 5
    esfera= (4*( pi*(r**3)))/3
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:34:13) 
-- CODE:
from math import *
r= float(input("raio:"))
x= float(input("altura:"))
opcao= int(input("numero 1 ou 2:")
esfera= (4* pi *r**3)/3
calota= (pi * x**2 *(3r-x))/3
comb= esfera-calota
ar=calota
if(opcao=1):
	print(round(comb,4))
else:
	print(round(ar,4))
-- ERROR:
File "XXXX", line 5
    esfera= (4* pi *r**3)/3
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:34:52) 
-- CODE:
from math import *
r= float(input("raio:"))
x= float(input("altura:"))
opcao= int(input("numero 1 ou 2:")
esfera= ( 4* pi *r**3)/3
calota= ( pi * x**2 *(3r-x))/3
comb= esfera-calota
ar=calota
if(opcao==1):
	print(round(comb,4))
else:
	print(round(ar,4))
-- ERROR:
File "XXXX", line 5
    esfera= ( 4* pi *r**3)/3
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:35:26) 
-- CODE:
from math import *
r= float(input("raio:"))
x= float(input("altura:"))
opcao= int(input("numero 1 ou 2:"))
esfera= ( 4* pi *r**3)/3
calota= ( pi * x**2 *(3r-x))/3
comb= esfera-calota
ar=calota
if(opcao==1):
	print(round(comb,4))
else:
	print(round(ar,4))
-- ERROR:
File "XXXX", line 6
    calota= ( pi * x**2 *(3r-x))/3
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:36:04) 
-- CODE:
from math import *
r= float(input("raio:"))
x= float(input("altura:"))
opcao= int(input("numero 1 ou 2:"))
esfera= ( 4* pi *r**3)/3
calota= ( pi * x**2 *(3*r-x))/3
comb= esfera-calota
ar=calota
if(opcao==1):
	print(round(comb,4))
else:
	print(round(ar,4))
-- OUTPUT:
170.5687
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:36:30) 
-- CODE:
from math import *
r= float(input("raio:"))
x= float(input("altura:"))
opcao= int(input("numero 1 ou 2:"))
esfera= ( 4* pi *r**3)/3
calota= ( pi * x**2 *(3*r-x))/3
comb= esfera-calota
ar=calota
if(opcao==1):
	print(round(comb,4))
else:
	print(round(ar,4))
-- OUTPUT:
170.5687
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:36:49) 
-- CODE:
from math import *
r= float(input("raio:"))
x= float(input("altura:"))
opcao= int(input("numero 1 ou 2:"))
esfera= ( 4* pi *r**3)/3
calota= ( pi * x**2 *(3*r-x))/3
comb= esfera-calota
ar=calota
if(opcao==1):
	print(round(comb,4))
else:
	print(round(ar,4))
-- OUTPUT:
170.5687
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:37:31) 
-- CODE:
from math import *
r= float(input("raio:"))
x= float(input("altura:"))
opcao= int(input("numero 1 ou 2:"))
esfera= ( 4* pi *r**3)/3
calota= ( pi * x**2 *(3*r-x))/3
comb= esfera-calota
ar=calota
if(opcao==1):
	print(round(comb,4))
else:
	print(round(ar,4))
-- OUTPUT:
170.5687
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:37:45) 
-- CODE:
from math import *
r= float(input("raio:"))
x= float(input("altura:"))
opcao= int(input("numero 1 ou 2:"))
esfera= ( 4* pi *r**3)/3
calota= ( pi * x**2 *(3*r-x))/3
comb= esfera-calota
ar=calota
if(opcao==1):
	print(round(comb,4))
else:
	print(round(ar,4))
-- OUTPUT:
170.5687
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:37:53) 
-- CODE:
from math import *
r= float(input("raio:"))
x= float(input("altura:"))
opcao= int(input("numero 1 ou 2:"))
esfera= ( 4* pi *r**3)/3
calota= ( pi * x**2 *(3*r-x))/3
comb= esfera-calota
ar=calota
if(opcao==1):
	print(round(comb,4))
else:
	print(round(ar,4))
-- OUTPUT:
170.5687
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:38:06) 
-- CODE:
from math import *
r= float(input("raio:"))
x= float(input("altura:"))
opcao= int(input("numero 1 ou 2:"))
esfera= ( 4* pi *r**3)/3
calota= ( pi * x**2 *(3*r-x))/3
comb= esfera-calota
ar=calota
if(opcao==1):
	print(round(comb,4))
else:
	print(round(ar,4))
-- EXECUTION TIME:
0.200166
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
170.5687
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
19.9983
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:38:36) 
-- CODE:
from math import *
r= float(input("raio:"))
x= float(input("altura:"))
opcao= int(input("numero 1 ou 2:"))
esfera= ( 4* pi *r**3)/3
calota= ( pi * x**2 *(3*r-x))/3
comb= esfera-calota
ar=calota
if(opcao==1):
	print(round(comb,4))
else:
	print(round(ar,4))
-- OUTPUT:
170.5687
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:38:44) 
-- CODE:
from math import *
r= float(input("raio:"))
x= float(input("altura:"))
opcao= int(input("numero 1 ou 2:"))
esfera= ( 4* pi *r**3)/3
calota= ( pi * x**2 *(3*r-x))/3
comb= esfera-calota
ar=calota
if(opcao==1):
	print(round(ar,4))
else:
	print(round(comb,4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:38:55) 
-- CODE:
from math import *
r= float(input("raio:"))
x= float(input("altura:"))
opcao= int(input("numero 1 ou 2:"))
esfera= ( 4* pi *r**3)/3
calota= ( pi * x**2 *(3*r-x))/3
comb= esfera-calota
ar=calota
if(opcao==1):
	print(round(ar,4))
else:
	print(round(comb,4))
-- EXECUTION TIME:
0.205407
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
